--- a/index.html
+++ b/index.html
@@ -15,30 +15,22 @@
     <div class="card__top">
       <!-- Изображение-ссылка товара -->
       <a href="#" class="card__image">
-        <img
-          src="1.png"
-          alt="Apple IPhone 14 PRO Max Gold"
-        />
+        <img src="1.png" alt="Красный лук"/>
       </a>
-      <!-- Скидка на товар -->
-      <div class="card__label">-10%</div>
     </div>
     <!-- Нижняя часть -->
     <div class="card__bottom">
-      <!-- Цены на товар (с учетом скидки и без)-->
-      <div class="card__prices">
-        <div class="card__price card__price--discount">50 000</div>
-        <div class="card__price card__price--common">100 000</div>
+      <div class="product_title">
+        красный лук
       </div>
-      <!-- Ссылка-название товара -->
-      <a href="#" class="card__title">
-        Смартфон Apple IPhone 14 Pro Max 256Gb, золотой
-      </a>
       <!-- Кнопка добавить в корзину -->
       <button class="card__add">В корзину</button>
+      <input type="text" class="input__order" inputmode="numeric" placeholder="Введите кол-во">
     </div>
+      
   </div>
 
 </body>
 
 </html>
+
