--- a/index.html
+++ b/index.html
@@ -25,12 +25,11 @@
       </div>
       <!-- Кнопка добавить в корзину -->
       <button class="card__add">В корзину</button>
-      <input type="text" class="input__order" inputmode="numeric" placeholder="Введите кол-во">
+      <input type="text" class="input__order" inputmode="numeric" placeholder="Введите кол-во" style="display: none;">
     </div>
-      
-  </div>
+</div>
+
+<script src="script.js"></script>
 
 </body>
-
 </html>
-
