--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Нижняя часть -->
     <div class="card__bottom">
       <div class="product_title">
-        красный лук
+        лук красный
       </div>
       <!-- Кнопка добавить в корзину -->
       <button class="card__add">В корзину</button>
