--- a/index.html
+++ b/index.html
@@ -9,26 +9,63 @@
 </head>
 
 <body>
-<!-- Карточка товара -->
-<div class="card">
+<div class="cards">
+  <!-- Карточка товара -->
+  <div class="card">
+      <!-- Верхняя часть -->
+      <div class="card__top">
+        <!-- Изображение-ссылка товара -->
+        <a href="#" class="card__image">
+          <img src="1.png" alt="Картофель"/>
+        </a>
+      </div>
+      <!-- Нижняя часть -->
+      <div class="card__bottom">
+        <div class="product_title">
+          Картофель
+        </div>
+        <!-- Кнопка добавить в корзину -->
+        <button class="card__add">В корзину</button>
+        <input type="text" class="input__order" inputmode="numeric" placeholder="Введите кол-во" style="display: none;">
+      </div>
+  </div>
+  <div class="card">
     <!-- Верхняя часть -->
     <div class="card__top">
       <!-- Изображение-ссылка товара -->
       <a href="#" class="card__image">
-        <img src="1.png" alt="Красный лук"/>
+        <img src="1.png" alt="Картофель черри"/>
       </a>
     </div>
     <!-- Нижняя часть -->
     <div class="card__bottom">
       <div class="product_title">
-        лук красный
+        Картофель черри
       </div>
       <!-- Кнопка добавить в корзину -->
       <button class="card__add">В корзину</button>
       <input type="text" class="input__order" inputmode="numeric" placeholder="Введите кол-во" style="display: none;">
     </div>
+  </div>
+  <div class="card">
+    <!-- Верхняя часть -->
+    <div class="card__top">
+      <!-- Изображение-ссылка товара -->
+      <a href="#" class="card__image">
+        <img src="1.png" alt="Картофель дольки"/>
+      </a>
+    </div>
+    <!-- Нижняя часть -->
+    <div class="card__bottom">
+      <div class="product_title">
+        Картофель дольки
+      </div>
+      <!-- Кнопка добавить в корзину -->
+      <button class="card__add">В корзину</button>
+      <input type="text" class="input__order" inputmode="numeric" placeholder="Введите кол-во" style="display: none;">
+    </div>
+  </div>
 </div>
-
 <script src="script.js"></script>
 
 </body>
