--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Vegetable Delivery</title>
 </head>
 <body>
 <div class="cards" id="product_new">
     <!-- Карточки будут добавлены здесь динамически -->
 </div>
-<script src="add_product.js"></script>
-<script src="script.js"></script>
+<script src="./add_product.js"></script>
+<script src="./script.js"></script>
 
 </body>
 </html>
