--- a/index.html
+++ b/index.html
@@ -7,11 +7,21 @@
     <title>Vegetable Delivery</title>
 </head>
 <body>
-<div class="cards" id="product_new">
-    <!-- Карточки будут добавлены здесь динамически -->
-</div>
-<script src="./add_product.js"></script>
-<script src="./script.js"></script>
+    <div class="three">
+        <h1>ОЧИЩЕННЫЕ ОВОЩИ</h1>
+      </div>
+    <div class="cards" id="product_new">
+        <!-- Товары с Id 1 будут добавляться сюда -->
+    </div>
+    <div class="three">
+        <h1>НЕОЧИЩЕННЫЕ ОВОЩИ</h1>
+      </div>
+    <div class="cards" id="product_old">
+        <!-- Товары с Id 2 будут добавляться сюда -->
+    </div>
+<script src="add_product.js"></script>
+<script src="script.js"></script>
+
 
 </body>
 </html>
