--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <title>Vegetable Delivery</title>
 </head>
+
 <body>
-    <div class="three">
-        <h1>ОЧИЩЕННЫЕ ОВОЩИ</h1>
-      </div>
-    <div class="cards" id="product_new">
-        <!-- Товары с Id 1 будут добавляться сюда -->
-    </div>
-    <div class="three">
-        <h1>НЕОЧИЩЕННЫЕ ОВОЩИ</h1>
-      </div>
-    <div class="cards" id="product_old">
-        <!-- Товары с Id 2 будут добавляться сюда -->
-    </div>
-<script src="add_product.js"></script>
-<script src="script.js"></script>
-
-
+    <section class="cards">
+        <div class="three">
+            <h1>ОЧИЩЕННЫЕ ОВОЩИ</h1>
+        </div>
+        <div class="container container__cards" id="product_new">
+            <!-- Товары с Id 1 будут добавляться сюда -->
+        </div>
+        <div class="three">
+            <h1>НЕОЧИЩЕННЫЕ ОВОЩИ</h1>
+        </div>
+        <div class="container container__cards" id="product_old">
+            <!-- Товары с Id 2 будут добавляться сюда -->
+        </div>
+    </section>
+    <script src="add_product.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
+
