--- a/index.html
+++ b/index.html
@@ -22,6 +22,23 @@
         <div class="container container__cards" id="product_old">
             <!-- Товары с Id 2 будут добавляться сюда -->
         </div>
+
+        <div class="container__order">
+            <div class="header">
+                <b>ВАШ ЗАКАЗ</b>
+                <span class="edit">Edit</span>
+            </div>
+            <div class="popup__item" id="popup_product_list">
+                <!-- Товары из popup будут добавляться сюда -->
+                <div class="order-item">
+                    <img src="./Image/1.png" alt="Burger">
+                    <div class="item-details">
+                        <div class="item-name">Лук красный</div>
+                    </div>
+                    <input type="text" class="quantity__order" inputmode="numeric">
+                </div>
+            </div>
+            
     </section>
     <script src="add_product.js"></script>
     <script src="script.js"></script>
