day(6) cart product

--- a/index.html
+++ b/index.html
@@ -5,32 +5,41 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Vegetable Delivery</title>
 </head>
 
 <body>
     <section class="cards">
-        <div class="three">
-            <h1>ОЧИЩЕННЫЕ ОВОЩИ</h1>
+        <div class="container_hiden">
+            <div class="three">
+                <h1>ОЧИЩЕННЫЕ ОВОЩИ</h1>
+            </div>
+            <div class="container container__cards" id="product_new">
+                <!-- Товары с Id 1 будут добавляться сюда -->
+            </div>
+            <div class="three">
+                <h1>НЕОЧИЩЕННЫЕ ОВОЩИ</h1>
+            </div>
+            <div class="container container__cards" id="product_old">
+                <!-- Товары с Id 2 будут добавляться сюда -->
+            </div>
+            <button class="sticky-button">
+                <i class="fas fa-shopping-cart"></i>
+            </button>
         </div>
-        <div class="container container__cards" id="product_new">
-            <!-- Товары с Id 1 будут добавляться сюда -->
-        </div>
-        <div class="three">
-            <h1>НЕОЧИЩЕННЫЕ ОВОЩИ</h1>
-        </div>
-        <div class="container container__cards" id="product_old">
-            <!-- Товары с Id 2 будут добавляться сюда -->
-        </div>
-
         <div class="container__order">
             <div class="header">
                 <b>ВАШ ЗАКАЗ</b>
             </div>
             <!-- Товары из popup будут добавляться сюда -->
-            <div class="popup__item" id="popup_product_list">
-        
+            <div class="popup__item" id="cleaned_order">
+                <h3 id="cleaned_order_header">ОЧИЩЕННЫЕ ОВОЩИ</h3>
             </div>
+            <div class="popup__item" id="uncleaned_order">
+                <h3 id="uncleaned_order_header">НЕОЧИЩЕННЫЕ ОВОЩИ</h3>
+            </div>
+        </div>
             
     </section>
     <script src="add_product.js"></script>
