--- a/index.html
+++ b/index.html
@@ -10,6 +10,28 @@
 </head>
 
 <body>
+    <!-- Loader -->
+    <div id="loader" class="loader">
+        <div aria-label="Orange and tan hamster running in a metal wheel" role="img" class="wheel-and-hamster">
+            <div class="wheel"></div>
+            <div class="hamster">
+                <div class="hamster__body">
+                    <div class="hamster__head">
+                        <div class="hamster__ear"></div>
+                        <div class="hamster__eye"></div>
+                        <div class="hamster__nose"></div>
+                    </div>
+                    <div class="hamster__limb hamster__limb--fr"></div>
+                    <div class="hamster__limb hamster__limb--fl"></div>
+                    <div class="hamster__limb hamster__limb--br"></div>
+                    <div class="hamster__limb hamster__limb--bl"></div>
+                    <div class="hamster__tail"></div>
+                </div>
+            </div>
+            <div class="spoke"></div>
+        </div>
+    </div>
+
     <section class="cards">
         <div class="container_hiden">
             <div class="three">
@@ -28,6 +50,8 @@
                 <i class="fas fa-shopping-cart"></i>
             </button>
         </div>
+    </section>
+    <section class="orders_section">
         <div class="container__order">
             <div class="header">
                 <b>ВАШ ЗАКАЗ</b>
@@ -40,9 +64,8 @@
                 <h3 id="uncleaned_order_header">НЕОЧИЩЕННЫЕ ОВОЩИ</h3>
             </div>
         </div>
-            
     </section>
-    <script src="add_product.js"></script>
+    
     <script src="script.js"></script>
 </body>
 
