--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <h3 id="uncleaned_order_header">НЕОЧИЩЕННЫЕ ОВОЩИ</h3>
             </div>
 
-            <form id="orderForm" action="http://127.0.0.1:5500" method="POST">
+            <form id="orderForm" action="https://eot4knqf71l4dkv.m.pipedream.net" method="POST">
                 <input type="hidden" name="cleaned_order_data" id="cleaned_order_data">
                 <input type="hidden" name="uncleaned_order_data" id="uncleaned_order_data">
                 <button type="submit" class="sticky-button-order">
